
bin_PROGRAMS = \
	crony_examples_basic

crony_examples_basic_SOURCES = \
	main.cpp

crony_examples_basic_LDADD = \
	$(SIGC_LIBS)

crony_examples_basic_LDFLAGS = \
	../../src/libcrony.la

crony_examples_basic_CXXFLAGS = \
	-I../../include

AM_CPPFLAGS = \
	$(SIGC_CFLAGS)

## File created by the gnome-build tools

