
bin_PROGRAMS = \
	crony_examples_basic

crony_examples_basic_SOURCES = \
	main.cpp

crony_examples_basic_LDADD = \
	$(LOG4CXX_LIBS)

crony_examples_basic_LDFLAGS = \
	../../src/libcrony.la

crony_examples_basic_CXXFLAGS = \
	-I../../include

AM_CPPFLAGS = \
	$(LOG4CXX_CFLAGS)

## File created by the gnome-build tools

